全局隐藏站点标题

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,4 +1,5 @@
---- ---
+---
+---
 /* 1. 引入当前主题的默认样式 (这一行非常重要，否则你的网站会变丑) */
 /* 如果你使用的是默认的 minima 主题，通常不需要改下面这行；
    如果是其他主题，可能需要改为 @import "jekyll-theme-名字"; 
